gcc/testsuite/rust/rustc/ui/parser/issue-30318.rs
fn foo() { }

//! Misplaced comment...
// { dg-error ".E0753." "" { target *-*-* } .-1 }
// { dg-note ".E0753." "" { target *-*-* } .-2 }

fn main() { }

